--- a/sdks/go/build.gradle
+++ b/sdks/go/build.gradle
@@ -16,6 +16,7 @@
  * limitations under the License.
  */
 
+// DONT MERGE - demonstrating PR bot
 plugins { id 'org.apache.beam.module' }
 applyGoNature()
 
