--- a/.github/REVIEWERS.yml
+++ b/.github/REVIEWERS.yml
@@ -15,7 +15,7 @@
 
 labels:
 - name: "Go"
-  reviewers: ["damccorm", "dannymccormick3", "damccormasareviewer"]
+  reviewers: ["damccorm", "dannymccormick3", "damccormNotACommitter"]
   exclusionList: [] # These users will never be suggested as reviewers
 # I don't know the other areas well enough to assess who the normal committers/contributors who might want to be reviewers are
 fallbackReviewers: [] # List of committers to use when no label matches
