--- a/scripts/ci/pr-bot/package.json
+++ b/scripts/ci/pr-bot/package.json
@@ -10,7 +10,8 @@
     "processNewPrs": "npm run build && node lib/processNewPrs.js",
     "processPrUpdate": "npm run build && node lib/processPrUpdate.js",
     "gatherMetrics": "npm run build && node lib/gatherMetrics.js",
-    "findPrsNeedingAttention": "npm run build && node lib/findPrsNeedingAttention.js"
+    "findPrsNeedingAttention": "npm run build && node lib/findPrsNeedingAttention.js",
+    "updateReviewers": "npm run build && node lib/updateReviewers.js"
   },
   "dependencies": {
     "@actions/exec": "^1.1.0",
